--- a/GUIs/spectrogramSettingsLayout.ui
+++ b/GUIs/spectrogramSettingsLayout.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>263</width>
-    <height>144</height>
+    <height>200</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,13 +19,13 @@
   <property name="minimumSize">
    <size>
     <width>263</width>
-    <height>144</height>
+    <height>200</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>263</width>
-    <height>144</height>
+    <height>200</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -34,15 +34,15 @@
   <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
-     <x>9</x>
-     <y>9</y>
-     <width>245</width>
-     <height>126</height>
+     <x>0</x>
+     <y>10</y>
+     <width>261</width>
+     <height>181</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="2" column="2">
-     <widget class="QLabel" name="label_6">
+    <item row="0" column="0">
+     <widget class="QLabel" name="label">
       <property name="minimumSize">
        <size>
         <width>50</width>
@@ -56,34 +56,15 @@
        </size>
       </property>
       <property name="text">
-       <string>detrend</string>
+       <string>nfft</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
      </widget>
     </item>
-    <item row="4" column="3">
-     <widget class="QPushButton" name="resetSetings_btn">
-      <property name="minimumSize">
-       <size>
-        <width>50</width>
-        <height>20</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>50</width>
-        <height>20</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>reset</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="1">
-     <widget class="QLineEdit" name="scaling_ui">
+    <item row="0" column="1">
+     <widget class="QLineEdit" name="nfft_ui">
       <property name="minimumSize">
        <size>
         <width>60</width>
@@ -102,7 +83,56 @@
        </font>
       </property>
       <property name="text">
-       <string>density</string>
+       <string>256</string>
+      </property>
+      <property name="placeholderText">
+       <string extracomment="timeScale"/>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="2">
+     <widget class="QLabel" name="label_2">
+      <property name="minimumSize">
+       <size>
+        <width>50</width>
+        <height>15</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>50</width>
+        <height>15</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>fs,kHz</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="3">
+     <widget class="QLineEdit" name="fs_kHz_ui">
+      <property name="minimumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>1000</string>
       </property>
       <property name="placeholderText">
        <string extracomment="timeScale"/>
@@ -125,50 +155,6 @@
       </property>
       <property name="text">
        <string>window</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QLabel" name="label_5">
-      <property name="minimumSize">
-       <size>
-        <width>55</width>
-        <height>15</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>55</width>
-        <height>15</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>noverlap</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="0">
-     <widget class="QLabel" name="label_7">
-      <property name="minimumSize">
-       <size>
-        <width>50</width>
-        <height>15</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>20</width>
-        <height>15</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>scaling</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -224,35 +210,8 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="3">
-     <widget class="QLineEdit" name="mode_ui">
-      <property name="minimumSize">
-       <size>
-        <width>60</width>
-        <height>20</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>60</width>
-        <height>20</height>
-       </size>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>8</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>psd</string>
-      </property>
-      <property name="placeholderText">
-       <string extracomment="timeScale"/>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QLineEdit" name="nfft_ui">
+    <item row="1" column="3">
+     <widget class="QLineEdit" name="nperseg_ui">
       <property name="minimumSize">
        <size>
         <width>60</width>
@@ -278,22 +237,22 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="2">
-     <widget class="QLabel" name="label_2">
+    <item row="2" column="0">
+     <widget class="QLabel" name="label_5">
       <property name="minimumSize">
        <size>
-        <width>50</width>
+        <width>55</width>
         <height>15</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>50</width>
+        <width>55</width>
         <height>15</height>
        </size>
       </property>
       <property name="text">
-       <string>fs,kHz</string>
+       <string>noverlap</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -327,8 +286,8 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="2">
-     <widget class="QLabel" name="label_8">
+    <item row="2" column="2">
+     <widget class="QLabel" name="label_6">
       <property name="minimumSize">
        <size>
         <width>50</width>
@@ -342,56 +301,7 @@
        </size>
       </property>
       <property name="text">
-       <string>mode</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="3">
-     <widget class="QLineEdit" name="fs_kHz_ui">
-      <property name="minimumSize">
-       <size>
-        <width>60</width>
-        <height>20</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>60</width>
-        <height>20</height>
-       </size>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>8</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>1000</string>
-      </property>
-      <property name="placeholderText">
-       <string extracomment="timeScale"/>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0">
-     <widget class="QLabel" name="label">
-      <property name="minimumSize">
-       <size>
-        <width>50</width>
-        <height>15</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>20</width>
-        <height>15</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>nfft</string>
+       <string>detrend</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -425,27 +335,30 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="1">
-     <widget class="QPushButton" name="saveSettings_btn">
+    <item row="3" column="0">
+     <widget class="QLabel" name="label_7">
       <property name="minimumSize">
        <size>
         <width>50</width>
-        <height>20</height>
+        <height>15</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>50</width>
-        <height>20</height>
+        <width>20</width>
+        <height>15</height>
        </size>
       </property>
       <property name="text">
-       <string>save</string>
+       <string>scaling</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
      </widget>
     </item>
-    <item row="1" column="3">
-     <widget class="QLineEdit" name="nperseg_ui">
+    <item row="3" column="1">
+     <widget class="QLineEdit" name="scaling_ui">
       <property name="minimumSize">
        <size>
         <width>60</width>
@@ -464,10 +377,150 @@
        </font>
       </property>
       <property name="text">
-       <string>256</string>
+       <string>density</string>
       </property>
       <property name="placeholderText">
        <string extracomment="timeScale"/>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="2">
+     <widget class="QLabel" name="label_8">
+      <property name="minimumSize">
+       <size>
+        <width>50</width>
+        <height>15</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>20</width>
+        <height>15</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>mode</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="3">
+     <widget class="QLineEdit" name="mode_ui">
+      <property name="minimumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>psd</string>
+      </property>
+      <property name="placeholderText">
+       <string extracomment="timeScale"/>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="0">
+     <widget class="QLabel" name="label_9">
+      <property name="minimumSize">
+       <size>
+        <width>50</width>
+        <height>15</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>20</width>
+        <height>15</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>type</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="1">
+     <widget class="QComboBox" name="scaleLinLogSqrt">
+      <property name="minimumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <item>
+       <property name="text">
+        <string>linear</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>log10</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>sqrt</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+    <item row="5" column="3">
+     <widget class="QPushButton" name="resetSetings_btn">
+      <property name="minimumSize">
+       <size>
+        <width>50</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>50</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>reset</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="2">
+     <widget class="QPushButton" name="saveSettings_btn">
+      <property name="minimumSize">
+       <size>
+        <width>50</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>50</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>save</string>
       </property>
      </widget>
     </item>
